# linux-cmake-compdb-gh-actions-sc

./: CMakeLists.txt  README.adoc  sonar-project.properties  update-date.txt
.github/workflows/: build.yml
src/: args.cppm  main.cpp
